Adding get user func
