# controller/user.go
@@ -4,10 +4,12 @@ import (
 	"encoding/json"
 	"io/ioutil"
 	"net/http"
+	"strconv"
 
 	"github.com/devmeireles/jobfinder/models"
 	"github.com/devmeireles/jobfinder/services"
 	"github.com/devmeireles/jobfinder/utils"
+	"github.com/gorilla/mux"
 )
 
 // CreateUser godoc
@@ -48,15 +50,42 @@ func CreateUser(w http.ResponseWriter, r *http.Request) {
 // @Tags users
 // @Accept  json
 // @Produce  json
-// @Success 200 {array} models.Skill
+// @Success 200 {array} models.User
 // @Router /users [get]
 func GetAllUsers(w http.ResponseWriter, r *http.Request) {
-	skills, err := services.GetAllUsers()
+	users, err := services.GetAllUsers()
 
 	if err != nil {
 		utils.ResErr(w, err, http.StatusInternalServerError)
 		return
 	}
 
-	utils.ResSuc(w, skills)
+	utils.ResSuc(w, users)
+}
+
+// GetUser godoc
+// @Summary Get details for a given user id
+// @Description Get details of user corresponding to the input id
+// @Tags users
+// @Accept  json
+// @Produce  json
+// @Param id path int true "ID of the user"
+// @Success 200 {object} models.User
+// @Router /user/{id} [get]
+func GetUser(w http.ResponseWriter, r *http.Request) {
+	vars := mux.Vars(r)
+	id, err := strconv.Atoi(vars["id"])
+
+	if err != nil {
+		utils.ResErr(w, err, http.StatusInternalServerError)
+		return
+	}
+
+	userReceived, err := services.GetUser(id)
+
+	if err != nil {
+		utils.ResErr(w, err, http.StatusNotFound)
+		return
+	}
+	utils.ResSuc(w, userReceived)
 }
