# routes/router.go
@@ -36,6 +36,7 @@ func (server *Server) SetupRoutes() *mux.Router {
 	// User routes
 	r.HandleFunc("/user", controller.CreateUser).Methods("POST")
 	r.HandleFunc("/users", controller.GetAllUsers).Methods("GET")
+	r.HandleFunc("/user/{id}", controller.GetUser).Methods("GET")
 
 	r.PathPrefix("/swagger").Handler(httpSwagger.WrapHandler)
 
